[gd_scene load_steps=22 format=2]

[ext_resource path="res://logic/explosive.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/sounds/587193__derplayer__explosion-big-02.ogg" type="AudioStream" id=2]
[ext_resource path="res://scenes/explosion_nuke.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/materials/vehicles/car_blue_body.tres" type="Material" id=4]
[ext_resource path="res://assets/materials/terrain/cement.tres" type="Material" id=5]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.18

[sub_resource type="CylinderShape" id=12]
height = 1.08911

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.477273, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.832031, 0.50773, 0.162506, 1, 0.605469, 0.54708, 0.231781, 1 )

[sub_resource type="GradientTexture" id=18]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, -1.36733, 0, 0, Vector2( 1, 0 ), -0.118322, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=19]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
direction = Vector3( 1, 1, 1 )
spread = 180.0
initial_velocity = 11.63
damping = 13.73
scale_curve = SubResource( 19 )
color_ramp = SubResource( 18 )

[sub_resource type="SpatialMaterial" id=20]
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id=8]
material = SubResource( 20 )

[sub_resource type="CapsuleMesh" id=21]

[sub_resource type="SpatialMaterial" id=28]
albedo_color = Color( 0.0431373, 0.368627, 0.109804, 1 )
metallic = 0.21

[sub_resource type="CubeMesh" id=22]

[sub_resource type="SpatialMaterial" id=29]
albedo_color = Color( 0.972549, 0.913725, 0.0196078, 1 )
metallic = 0.4

[sub_resource type="SpatialMaterial" id=30]
albedo_color = Color( 0.972549, 0.913725, 0.0196078, 1 )
metallic = 0.4

[sub_resource type="CylinderMesh" id=11]
height = 1.091

[sub_resource type="CubeMesh" id=13]

[node name="Explosive" type="RigidBody" groups=["bomb"]]
mass = 20.0
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
shape = SubResource( 12 )

[node name="ParticlesExplosion" type="Particles" parent="."]
emitting = false
amount = 30
lifetime = 0.26
one_shot = true
explosiveness = 0.54
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )

[node name="ExplosionSoundMineBomb" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -6.992

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
light_color = Color( 1, 0, 0, 1 )
spot_range = 150.0
spot_angle = 11.97

[node name="NukeMeshes" type="Spatial" parent="."]

[node name="Body" type="MeshInstance" parent="NukeMeshes"]
transform = Transform( 1, 0, 0, 0, -0.0308028, -0.999525, 0, 0.999525, -0.0308028, 0, 1.34651, 0 )
visible = false
mesh = SubResource( 21 )
skeleton = NodePath("../..")
material/0 = SubResource( 28 )

[node name="Fin1" type="MeshInstance" parent="NukeMeshes"]
transform = Transform( 0.881522, 0, 0, 0, 0.950328, 0, 0, 0, 0.0227092, 0, 2.55986, 0 )
visible = false
mesh = SubResource( 22 )
skeleton = NodePath("../..")
material/0 = SubResource( 29 )

[node name="Fin2" type="MeshInstance" parent="NukeMeshes"]
transform = Transform( -3.85325e-08, 0, -0.0238011, 0, 0.950328, 0, 0.841083, 0, -9.92653e-10, 0, 2.54532, 0 )
visible = false
mesh = SubResource( 22 )
skeleton = NodePath("../..")
material/0 = SubResource( 30 )

[node name="BombMeshes" type="Spatial" parent="."]

[node name="Body" type="MeshInstance" parent="BombMeshes"]
transform = Transform( 0.291023, 0, 0, 0, -0.00910172, -0.3325, 0, 0.295343, -0.00808462, 0, 0.341193, 0 )
visible = false
mesh = SubResource( 21 )
skeleton = NodePath("../..")
material/0 = ExtResource( 4 )

[node name="Fin1" type="MeshInstance" parent="BombMeshes"]
transform = Transform( 0.249905, 0, 0, 0, 0.257885, 0, 0, 0, 0.0271301, 0, 0.880656, 0 )
visible = false
mesh = SubResource( 22 )
skeleton = NodePath("../..")
material/0 = ExtResource( 4 )

[node name="Fin2" type="MeshInstance" parent="BombMeshes"]
transform = Transform( -1.09237e-08, 0, -0.0271301, 0, 0.257885, 0, 0.249905, 0, -1.18589e-09, 0, 0.866959, 0 )
visible = false
mesh = SubResource( 22 )
skeleton = NodePath("../..")
material/0 = ExtResource( 4 )

[node name="MineMeshes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0483567, 0 )

[node name="Main" type="MeshInstance" parent="MineMeshes"]
transform = Transform( 0.3, 0, 0, 0, 0.2, 0, 0, 0, 0.3, 0, 0, 0 )
visible = false
mesh = SubResource( 11 )
skeleton = NodePath("../..")
material/0 = ExtResource( 5 )

[node name="Top" type="MeshInstance" parent="MineMeshes"]
transform = Transform( 0.1, 0, 0, 0, 0.05, 0, 0, 0, 0.1, 0, 0.15282, 0 )
visible = false
mesh = SubResource( 13 )
skeleton = NodePath("../..")
material/0 = ExtResource( 5 )

[node name="OmniLight" type="OmniLight" parent="MineMeshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.278049, 0 )
visible = false
light_color = Color( 1, 0, 0, 1 )

[node name="ExplosionNuke" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="." to="." method="_on_Bomb_body_entered"]
